@@ -39,7 +39,7 @@ require "$SCRIPTSDIR/partition.pl$DOTIN";
 
 my @lilo_global_vars = qw (default prompt delay timeout append boot root);
 my @lilo_common_image_vars = qw (label);
-my @lilo_image_vars = (@lilo_common_image_vars, qw (image append root vga));
+my @lilo_image_vars = (@lilo_common_image_vars, qw (image append root vga initrd));
 my @lilo_other_vars = (@lilo_common_image_vars, qw (other));
 
 sub gst_boot_lilo_verify_entrylabel
